[gd_scene load_steps=7 format=2]

[ext_resource path="res://recursos/cafe_espacial.png" type="Texture" id=1]
[ext_resource path="res://cenas/jogo/itens/Item.gd" type="Script" id=2]
[ext_resource path="res://recursos/sons/apareceu_item.ogg" type="AudioStream" id=3]
[ext_resource path="res://recursos/sons/pegar_item.ogg" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "piscar"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.823529 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0.823529 ) ]
}

[node name="Item" type="Node2D"]
modulate = Color( 1, 1, 1, 0.823529 )
z_index = -1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Touch" type="TouchScreenButton" parent="."]
position = Vector2( 0, 1.19209e-07 )
scale = Vector2( 0.8, 0.8 )
shape = SubResource( 1 )
shape_centered = false

[node name="Piscar" type="AnimationPlayer" parent="."]
anims/piscar = SubResource( 2 )

[node name="ApareceuItem" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="PegarItem" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
[connection signal="pressed" from="Touch" to="." method="_on_Touch_pressed"]
